[package]
name = "nonomura"
version = "0.1.1"
authors = ["Mariell Hoversholm <proximyst@proximyst.com>"]
edition = "2018"

[dependencies]
async-std = { version = "1", features = ["std", "attributes", "unstable"] }

bytes = { version = "0.5", features = ["serde"] }
encoding = "0.2"
futures = "0.3"

serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"

failure = "0.1"

log = { version = "~0.4", features = ["release_max_level_info"] }
simplelog = "~0.7"

parking_lot = "0.10"

dotenv = "0.15"

proxy-protocol = "0.1"

[profile.release]
opt-level = 3
debug-assertions = false
overflow-checks = false
lto = true
debug = false
rpath = false
