[package]
authors = ["Mariell Hoversholm <proximyst@proximyst.com>"]
edition = "2018"
name = "nonomura"
version = "0.1.3"
[dependencies]
dotenv = "0.15"
encoding = "0.2"
failure = "0.1"
futures = "0.3"
parking_lot = "0.10"
serde_json = "1"
simplelog = "~0.7"
"src/" = "*"

[dependencies.bytes]
features = ["serde"]
version = "0.5"

[dependencies.log]
features = ["release_max_level_info"]
version = "~0.4"

[dependencies.serde]
features = ["derive", "rc"]
version = "1"

[dependencies.tokio]
features = ["full"]
version = "0.2"

[profile]
[profile.release]
debug = false
debug-assertions = false
lto = true
opt-level = 3
overflow-checks = false
rpath = false
