[package]
authors = ["Mariell Hoversholm <proximyst@proximyst.com>"]
edition = "2018"
name = "nonomura"
version = "0.1.3"

[dependencies]
dotenv = "~0.15"
encoding_rs = "~0.8"
futures = "~0.3"
serde_json = "~1"
snafu = "~0.6"
eyre = "~0.6"
stable-eyre = "~0.2"
tracing = "~0.1"
tracing-subscriber = "~0.2"
proxy-protocol = "~0.4"

[dependencies.bytes]
features = ["serde"]
version = "~1"

[dependencies.serde]
features = ["derive", "rc"]
version = "~1"

[dependencies.tokio]
features = ["full"]
version = "~1"
